Fix: 중복 메서드 및 엔드포인트 제거, 임포트 경로 수정